--- a/src/app/characterList/[slug]/characterDetail.module.css
+++ b/src/app/characterList/[slug]/characterDetail.module.css
@@ -5,41 +5,9 @@
 
 .imgContainer {
   flex: 1;
-  position: relative;
-  height: calc(100vh - 200px);
+  height: 500px;
 }
 
 .img {
   object-fit: cover;
-}
-
-.textContainer {
-  flex: 2;
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
-
-.title {
-  font-size: 64px;
-}
-
-.detail {
-  display: flex;
-  gap: 20px;
-}
-
-.avatar {
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-.content {
-  font-size: 20px;
-}
-
-@media (max-width: 768px) {
-  .imgContainer {
-    display: none;
-  }
 }
